# dlc

./: db.sqlite3  manage.py  pyproject.toml  pyproject.toml.old
DATALINK/: asgi.py  settings.py  urls.py  wsgi.py
DLC/: apps.py  urls.py  views.py
DLC/templates/DLC/: home.html  pagina1.html  pagina2.html
templates/: main.html
